@@ -7,7 +7,7 @@
 # Debian style
 ### BEGIN INIT INFO
 # Provides:          bloonix-srvchk
-# Required-Start:    $network
+# Required-Start:    $network $syslog $all
 # Required-Stop:     $syslog
 # Default-Start:     2 3 4 5
 # Default-Stop:      0 1 6
