@@ -1,3 +1,7 @@
+bloonix-server (0.9) released at 2014-XX-XX
+
+    * Changed the boot facility.
+
 bloonix-server (0.8) released at 2014-11-17
 
     * bloonix-update-agent-host-config adds now the agent id
